[tool.poetry]
name = "tweety_api"
version = "0.1.0"
description = "Gets data from Twitter API"
authors = ["chinmayshah99 <chinmayshah3899@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
